bugfix: Fix spacings
- Add modificator to add margin for cover
- Remove redundant margin for text

--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,8 +1,8 @@
 .cover {
   box-sizing: border-box;
-  max-width: 1280px;
+  max-width: 1184px;
   width: 100%;
-  padding: 245px 48px;
+  padding: 245px 0;
 
   display: flex;
   flex-direction: column;
